# ai-quickstart-pub

./: .gitignore  .gitmodules  .spellcheck.yml  .wordlist.txt  .yamllint  README.md  test-file.md  test-spellcheck.md  test-spellcheck.yaml  test-yamllint.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: publication_suggestion.yaml
.github/scripts/: check-pr-sla.sh
.github/workflows/: doc-review.yml  pr-sla-reminder.yml  spellcheck.yml  test-claude.yml  yamllint.yml
docs/specs/: automated-doc-review.md
quickstart/ansible-log-analysis/: .containerignore  .env.example  .gitignore  .pre-commit-config.yaml  backend_init_pipeline.py  langgraph.json
quickstart/ansible-log-analysis/.githooks/: pre-push
quickstart/ansible-log-analysis/.github/: CODEOWNERS
quickstart/ansible-log-analysis/.github/workflows/: check-lint-and-format.yml
quickstart/ansible-log-analysis/data/: example_queries.txt
quickstart/ansible-log-analysis/deploy/helm/: README.md
quickstart/ansible-log-analysis/deploy/local/: README.md  compose.yaml
quickstart/ansible-log-analysis/examples/: test_log_lines_above.py
quickstart/ansible-log-analysis/services/annotation_interface/: .containerignore  test_end_to_end.py
quickstart/ansible-log-analysis/services/clustering/: Containerfile  README.md  main.py  model_loader.py  pyproject.toml
quickstart/ansible-log-analysis/services/rag/: index_loader.py  main.py  pyproject.rag-init.toml
quickstart/ansible-log-analysis/services/text-embeddings-inference/: Dockerfile
(+603 files in other folders)
