[project]
name = "clustering"
version = "0.1.0"
description = "Clustering service for Ansible Log Monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "scikit-learn>=1.7.1",
    "model_registry==0.2.21",
    "minio>=7.2.17",
    "uvicorn>=0.37.0",
]
